--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
-    <script src="javascript/map,js"></script>
-     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgUBDpciQ4GLJjq1B8lim46It3YpaBAqM&callback=initMap"
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4F-oq1QY63iv67WvtWf--mK_ByVriyAs&callback=initMap"
   ></script>
+    <script src="javascript/map.js"></script>
     <title> Project 1: ITMD-361 Fundamentals of Web Development </title>
   </head>
   <body class="index_body">
