--- a/Resume.html
+++ b/Resume.html
@@ -14,8 +14,9 @@
       </div>
       <nav class='navbar'>
         <ul>
-          <li><a href="index.html"> About_Me</a></li>
-          <li><a href="About_UAE.html"> About_UAE </a></li>
+          <li><a href = "Resume.html"> Resume  </a></li>
+        <li><a href = "index.html"> About_Me </a></li>
+        <li><a href="About_UAE.html"> About_UAE </a></li>
         </ul>
       </nav>
     </header>
