--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
-    https://maps.googleapis.com/maps/api/directions/json?origin=Toronto&destination=Montreal&key=AIzaSyBKOZ7RnrHHGrtccOebnO24tiWZA5K2z5E
+   <script async defer src="https://maps.googleapis.com/maps/api/js?&callback=initMap"></script>
     <script src="javascript/map.js"></script>
     <title> Project 1: ITMD-361 Fundamentals of Web Development </title>
   </head>
