--- a/map.html
+++ b/map.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
    <script src="javascript/map.js"></script>
     <title> Project 1: ITMD-361 Fundamentals of Web Development </title>
   </head>
@@ -23,6 +24,6 @@
     </header>
     <div id="map"></div>
       </div>
-      <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
+      <script async defer src="https://maps.googleapis.com/maps/api/js?&callback=initMap"></script>
   </body>
 </html>
