--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
            <li><a href = "Resume.html"> Resume  </a></li>
         <li><a href = "index.html"> About_Me </a></li>
         <li><a href="About_UAE.html"> About_UAE </a></li>
+          <li><a href="map.html"> Map</a></li>
         </ul>
       </nav>
     </header>
