--- a/Resume.html
+++ b/Resume.html
@@ -17,6 +17,7 @@
           <li><a href = "Resume.html"> Resume  </a></li>
         <li><a href = "index.html"> About_Me </a></li>
         <li><a href="About_UAE.html"> About_UAE </a></li>
+          <li><a href="map.html"> Map</a></li>
         </ul>
       </nav>
     </header>
